--- a/main.tex
+++ b/main.tex
@@ -1027,7 +1027,7 @@ implies Life, in contradiction with the Darwin `accidental life` approach, a gen
 called `theory` which is contradicted by so many missing links [26]. The fundamental hypothesis of
 this article is that the Cosmos is like a computer. A common point with the brain is the multi-base
 character, experienced in musical sensation. So, intelligent life must be universal. The famous Fermi
-question `where are they?`, is not a paradox, since any abnormal observation is a-priori rejected by a
+question `where are they ?` is not a paradox, since any abnormal observation is a-priori rejected by a
 dogmatic community.
 
 Another type of separation exists, but with not any debate: only a small minority thinks Physics
@@ -1036,30 +1036,31 @@ Biology). The present article shows that the former are right: physical constant
 constants, so the present-day mathematics are still in infancy, not realizing that the discovery of
 sporadic groups is a crucial discovery for physics. In particular, it is clearly shown that
 Grandcosmos is like a computer which uses optimal physico-mathematical dimensionless constants as
-calculation basis and that they are present in DNA characteristics [3]. The present article show
-definitely the liaisons with $\pi$, e and $\gamma$, and rehabilitates String theories, also abandoned by a
+calculation basis and that they are present in DNA characteristics [3]. The present article shows
+definitely the liaisons with $\pi$, e and $\gamma$, as well as very special rational approximations of 
+$\pi$, and e, and rehabilitates String theories, also abandoned by a
 majority [27].
 
 There is also the Determinism separation, a majority believing seriously that `God plays dices`,
-in contradiction with our Cosmic Computing Principle. The c-free analysis gives simply and
+in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
 directly the Large time periodicity of an all-deterministic Grandcosmos, as it gives in an elementary
 calculation the visible Universe horizon radius, in a formula which was present for a century in
-astrophysics text-books: the limit of a star radius when the number of atoms reduce to unity [3].
+astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity [3].
 This is tied to the application of the exclusion principle that Eddington dared to apply in
 cosmology. For this reason he was declared `crakpot` and his theory discarded by a majority.
 Fortunately, the large theoretical advance of Eddington is now recognized [28][29], but without
 mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
 
-The same rejection seems to apply now to Atiyah's last work. The present article shows that at
-least a part of it is very pertinent.
+The same rejection seems to apply now to Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at
+least a part of these works is very pertinent.
 
 It seems that the pre-scientific role of chance is a common point between three misleading views
 in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's argumentation
-with a scientific theory. Secondly, in quantum physics, the so-called `incertainty principles`, which are
-only manifestations of the general wave propagation (Field and flickering Matter), through Fourier
+with a scientific theory. Secondly, in quantum physics, the so-called `uncertainty principles`, which are
+only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
-The pertinence of such a simple polynomial relations cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange that this term \textit{immergence} is a neologism. 
+The pertinence of such simple polynomial relations cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange, and troubling, that this term \textit{immergence} is a neologism. 
 
 
 \section {Conclusions Simplicity at work}
