--- a/main.tex
+++ b/main.tex
@@ -727,7 +727,7 @@ The last equation means the implication of $B = e^{e^{\pi}}$, the double exponen
 (\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
 \end{equation}
 
-It appears also in the following holographic relation:
+It is also exhibited in the holographic relation described below:
 
 \begin{equation}
 (4\pi/3) B^3 \approx \pi(F^3/a)^2
@@ -749,7 +749,7 @@ Where $W$ is the W boson-Electron mass ratio (see Section III). Now, to 30 ppm a
 
 
 
-The central term $F^3/a$ shows another relation between $j$ and $\Gamma$, to 0.05 % and 0.2 \%:
+The central term $F^3/a$ exhibits another relation between $j$ and $\Gamma$, to 0.05 % and 0.2 \%:
 \begin{equation}
 F^3/a \approx (3/e)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
 \end{equation}
