--- a/main.tex
+++ b/main.tex
@@ -1010,7 +1010,9 @@ compatible with the Higgs Boson energy, interesting to note the perfect match wi
 \approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains :
 $\Gamma \approx e^\pi + 2$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about $n = \Gamma$.
-
+One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
+$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
+confirming the role of the dimension 496 and Atiyah's symmetry between p and a. 
 
 \section {Discussion}
 \markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
