--- a/main.tex
+++ b/main.tex
@@ -943,7 +943,7 @@ It yields to a muon mass relative to electron
 \end{equation} inside its 20 ppb measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 \begin{equation}
-(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}
+(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3
 \end{equation}
 has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 sigmas. With the above $\mu$ value, it
@@ -1012,7 +1012,7 @@ $\Gamma \approx e^\pi + 2$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about $n = \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
-confirming the role of the dimension 496 and Atiyah's symmetry between p and a. 
+confirming the role of the dimension 496 and Atiyah's symmetry between $p$ and $a$. 
 
 \section {Discussion}
 \markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
