--- a/main.tex
+++ b/main.tex
@@ -857,6 +857,7 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV, and corresponds in the Topological Axis to $k \approx \pi $, correspondong to $n \approx \gamma \Gamma$ (Fig. 1).
+The above study of fractional development of e leads to the following relation between $a$ and the Electron magnetic moment $2d_e$, in the ppb range: :$$a(e/2d_e-1) approx 7^2-1/4d_e(496+1)$$ Note that $496 + 1 = 7 \times 71$, showing the largest prime 71 in the Monster cardinal.
 
 
 \subsection {Wyler's approach}
