--- a/main.tex
+++ b/main.tex
@@ -882,6 +882,13 @@ Note that, while, to 41 ppm:
 $$R_{GC}/\lambdabar_e \approx 6^{128}/(1+1/\sqrt2)$$
 leading to the approximation for the celerity ratio $ C/c\approx3^{128} \sqrt{ln2/2}$. Moreover, one observes, to 2.6 %;
 $(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$, so the quark hypothesis u = 5, d = 6 is comforted by the Grandcosmos. This would imply that the quark d is composite.
+ In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. Now, this is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) ≈ 4.965114245, one notes that $a ≈ e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa ≈ 1/e$, and, to 65 ppb:
+\begin{equation}
+a ≈ 44\pi - Arccos(1/e)
+\end{equation}
+a formula largely diffused on the web, but without indication of its origin. Now $w^{e^w}$ is close to the canonic $R_{GC}/\lambdabar_e$. The study of deviation leads to (0.14 ppm):
+$$w^{e^w} p/\sqrt2 \approx 2^{64×5} (6\pi^5)^2$$
+This reaches the ppb precision for $\pi_1 = 77368/24627$, corresponding to the fractional development 3, 7, 16, -218. 
 
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
 
