--- a/main.tex
+++ b/main.tex
@@ -887,7 +887,7 @@ $(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$, so the quark hypothesis u = 5, d = 
 a \approx 44\pi - Arccos(1/e)
 \end{equation}
 a formula largely diffused on the web, but without indication of its origin. Now $w^{e^w}$ is close to the canonic $R_{GC}/\lambdabar_e$. The study of deviation leads to (0.14 ppm):
-$$w^{e^w} p/\sqrt2 \approx 2^{64×5} (6\pi^5)^2$$
+$$w^{e^w} p/\sqrt2 \approx 2^{64\times5} (6\pi^5)^2$$
 This reaches the ppb precision for $\pi_1 = 77368/24627$, corresponding to the fractional development 3, 7, 16, -218. 
 
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
