--- a/main.tex
+++ b/main.tex
@@ -175,6 +175,7 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     to the graviton mass.
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
+    The central dimension is $n = 16$, suggesting that the whole sheme is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
 \end{figure*}
 
@@ -287,17 +288,14 @@ that of standard cosmology, where initial conditions, during Planck's time, woul
 extreme precision, even with inflation. 
 
 With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that $N_{Ed}$ times the neutron mass, corrected by the ratio $H/p$, central in Section 4, gives, to 41 ppm the effective mass $3M/10$,so that:
-
 \begin{equation}
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
-
 showing a kind of symmetry between the masses.
 
 By identifying the large number of Eddington $N_{Ed} = 136 \cdot
 2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805 
 Gly$ at $0.05\%$ of the above value.
-
 
 In the Hydrogen gravitational molecule model, $R$ is defined by the following 1D-2D Special
 Holographic Relation, using the wavelengths of the Electron, Proton and Hydrogen, while the background wavelength appear in the 3D term involving the molecular Hydrogen wavelength:
