--- a/main.tex
+++ b/main.tex
@@ -167,14 +167,17 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring n = 10, it is the Pion.  For $k = \pi$, $n = \gamma \times \Gamma$, $y \approx 496^2$ 
+    For the superstring $n = 10$, it is the Pion. For $k = \pi$, $n = \gamma \times \Gamma$, $y \approx 496^2$ 
     the square of the String dimension and the tenth root of the Monster cardinal, it is
     the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Univrese Bekenstein-Hawking entropy.
-    With unit the electron mass, n = 24 would correspond to the graviton mass, while n = G, 
+    
+    With unit the electron mass, n = 24 would correspond to the graviton mass, while $n = \Gamma$, 
     to the graviton mass.
+    
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
+    
     The central dimension is $n = 16$, suggesting that the whole sheme is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
 \end{figure*}
