--- a/main.tex
+++ b/main.tex
@@ -161,23 +161,20 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     is tied to bosonic critical dimension 26, while reduction lead to n = 18 (thermal photon, 
     tied to the the mammal wavelengt throught the Sternheimer scale factor j), n = 10, (superstring 
     dimension, Hydrogen atom), and n = 2 (String). For the number 24 of transverses dimensions, it is
-    the Kotov length, through a factor 2$\pi$a, with a = 137.036. For n = G, the Atiyah constant, it is the 
+    the Kotov length, through a factor 2$\pi$a, with a = 137.036. For $n = \Gamma $, the Atiyah constant, it is the 
     galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k = e^{2}$, y = 2e, it is 
     the Grandcosmos radius.
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring $n = 10$, it is the Pion. For $k = \pi$, $n = \gamma \times \Gamma$, $y \approx 496^2$ 
+    For the superstring $n = 10$, it is the Pion. For $k = \pi$, $n = \gamma \times \Gamma$, $Y \approx 496^2$ 
     the square of the String dimension and the tenth root of the Monster cardinal, it is
     the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Univrese Bekenstein-Hawking entropy.
-    
     With unit the electron mass, n = 24 would correspond to the graviton mass, while $n = \Gamma$, 
     to the graviton mass.
-    
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
-    
     The central dimension is $n = 16$, suggesting that the whole sheme is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
 \end{figure*}
