--- a/main.tex
+++ b/main.tex
@@ -618,30 +618,31 @@ confirms the above Planck's wall breakdown.
 \markright{Your Full Names.  Short Title of Your Paper}
 \subsection{The eddington's constant 137}
 
-The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the matrix 16 x 16. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
-series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
-space-time. Indeed:
+The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
+series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory ( a synthesis of five string theories) and the 4 of space-time. Indeed:
 
 $$137 = 11^{2} + 4^{2}$$
 
 while, as seen above:
 
-$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$
+$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$.
 
 Since Riemann series are tied to the prime number distribution, it sounds odd and incredible that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
-As ancient Egyptian used only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series 
+As ancient Egyptian used only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series: 
 $$S_{5} = 137/60$$
-Indeed it appears in the Ptolemaic approximation for $\pi$: $377/120 = 2 +  S_{5}/2$
+Indeed it appears in the Ptolemaic approximation for $\pi$: $$\pi_Pt = 377/120 = 2 +  S_{5}/2$$
 
-Recall that the electrical constant $a$ characterizes the force $\hbar c/al^{2}$ between two l-distant
-elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
+Recall that the electrical constant $a$ characterizes the force $$F =\hbar c/al^{2}$$ between two l-distant
+elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations [1]. It is
 misleading that physicists focused on only one property, the appearance of its fifth power in the
-Hydrogen hyper-fine spectra, and call its inverse the `fine-structure constant`. It is strange also that
-Eddington's Theory was rejected as soon as a appeared to be different from 137. Indeed, the
-following shows that 137 plays a central role in fine-tuning analysis. One may interpret 137 + 1 as
+Hydrogen hyper-fine spectra, and call its inverse $\alpha$ the `fine-structure constant`. It is strange also that
+Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Indeed, the
+following shows that 137 plays a central role in fine-tuning analysis. 
+
+One may interpret 137 + 1 as
 the sum of the numbers of dimensions in the Topological Axis [3], taking into account the double
 point for the superstring value n = 10, and the remarkable sum:
 \begin{equation}
@@ -653,13 +654,17 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Moreover, it is very close (3 ppb) to $3^{a/F}$, where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis is also used by the Cosmos.
+meaning the ratio $a/137$ acts as a canonical ratio. Moreover, it is very close (3 ppb) to
+$$a/137 \approx 3^{a/F}$$,
+where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis is also used by the Cosmos. Also, to 3.6 ppm:
+$$ a \approx (1-3^{-1/150})^{-1}$$
+confirms the role of the base 3.
 
 \subsection{The Arithmetical Logic : Holic Principle}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$ , where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
-prime, by $T^{2} = L^{3} = N^{6}$, where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study [18].
+prime, by $$T^{2} = L^{3} = N^{6}$$, where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study [18].
 
 This is the degenerate arithmetic form of the spatio-temporal holographic principle.
 
@@ -679,7 +684,7 @@ where appear the masses of the heavy leptons (Section 4.6). This implies a drama
 \begin{equation}
 \delta \approx e^{2/e^2} 
 \end{equation}
-confirming the central role of e.
+confirming the central role of $e$ (section 4.1).
 
 
 \subsection{The Conservation of Information}
