--- a/main.tex
+++ b/main.tex
@@ -689,7 +689,7 @@ confirming the central role of $e$ (section 4.1).
 
 \subsection{The Conservation of Information}
 
-The Grandcosmos holographic reduction radius $R\prime$ shows itself an overwhelming holographic
+The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
 relation with the CMB Wien wavelength $l_{CMB}$, to $0.01\%$:
 \begin{equation}
 4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
@@ -701,7 +701,7 @@ argument in favor of a total conservation of information was tied to a non-evolu
 [21], Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
 Physics are very similar [3]. 
 
-One notices that $e^{a}$ is also compatible with the half volume of the proton, with
+Note that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
 
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-
@@ -711,52 +711,44 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 
 \subsection{Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = \gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
-so confirming the $R$ value to 45 ppm, a correction which is $\beta p/p_0$, within 0.2\%.
+so confirming the $R$ value to 45 ppm, a correction which is $\beta p/p_0$, within 0.2 ppm.
 
 Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\pi^2/ln2$ (to 0.013 \%, 0.013 \% and 0.046 \%):
 \begin{equation}
 j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
-It was noted [3] that $j\approx T_{mam}/T_{CMB}$, the ratio between mammal and cosmic temperatures, and that $(Rl_P)^{1/2}$ is close (1\%) to the mammal wavelength $hc/kT_{mam}$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$(R^{\prime}l_P)^{1/2}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
+It was noted [3] that $$j\approx T_{mam}/T_{CMB}$$, the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$. So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover, to 0.1\%, the water triple point enters $$(R^{\prime}l_P)^{1/2}\approxhc/kT_{mam}$$, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
 
-Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $, and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
+Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $$j^{22} \approx 3 P^2 $$, and, more precisely, to 0.01 \% :$$j^{22} \approx Pp_E^7 $$, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
-The last equation means the implication of $B = e^{e^{\pi}}$, the double exponential of $\pi$ in the ultimate theory. Indeed, 0.3 ppm and 0.03 \% :
+The last equation means the implication of $B = e^{e^{\pi}}$, the double exponential of $\pi$, in the ultimate theory. Indeed, to 0.3 ppm and 0.03 \% :
 \begin{equation}
 (\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
 \end{equation}
 
-It is also exhibited in the holographic relation described below:
-
+It is also exhibited in the following holographic relation:
 \begin{equation}
-(4\pi/3) B^3 \approx \pi(F^3/a)^2
+(4\pi/3) B^3 \approx \pi(F^3/a)^2,
 \end{equation}
 
 while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/A$, in the Hydrogen atom, with $E_e = m_ec^2$.
 Note that, to 10 ppm and 2 ppm:
-
 \begin{equation}
 (H/n)^2(F^2/B)^3 \approx (4/3) a^2 \approx W/2\pi \beta^4
 \end{equation}
-
-Where $W$ is the W boson-Electron mass ratio (see Section III). Now, to 30 ppm and 20 ppm :  
-
+Where $W$ is the W boson-Electron mass ratio (see Section 4). Now, to 30 ppm and 20 ppm :  
 \begin{equation}
  (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
 \end{equation}
-
-
-
-
 The central term $F^3/a$ exhibits another relation between $j$ and $\Gamma$, to 0.05 % and 0.2 \%:
 \begin{equation}
 F^3/a \approx (3/e)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
 \end{equation}
-confirming that $j$ and $G$ has the status of invariant dimension, i.e. they are, according to the Holic Principle, privileged exponents.
+confirming that $j$ and $G$ has the status of invariant generalised dimension, i.e. they are, according to the Holic Principle, privileged exponents.
 
 \subsection{Ubiquity of $a^{a}$}
 
