--- a/main.tex
+++ b/main.tex
@@ -619,7 +619,7 @@ confirms the above Planck's wall breakdown.
 \subsection{The eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
-series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory ( a synthesis of five string theories) and the 4 of space-time. Indeed:
+series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed:
 
 $$137 = 11^{2} + 4^{2}$$
 
@@ -627,8 +627,8 @@ while, as seen above:
 
 $$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$.
 
-Since Riemann series are tied to the prime number distribution, it sounds odd and incredible that mathematicians
-have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
+Since Riemann series are tied to the prime number distribution, it seemss odd and incredible that mathematicians
+have not point out the primes appearing in the harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
 As ancient Egyptian used only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series: 
@@ -637,7 +637,7 @@ Indeed it appears in the Ptolemaic approximation for $\pi$: $$\pi_Pt = 377/120 =
 
 Recall that the electrical constant $a$ characterizes the force $$F =\hbar c/al^{2}$$ between two l-distant
 elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations [1]. It is
-misleading that physicists focused on only one property, the appearance of its fifth power in the
+misleading that physicists focused on one property only, the appearance of its fifth power in the
 Hydrogen hyper-fine spectra, and call its inverse $\alpha$ the `fine-structure constant`. It is strange also that
 Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Indeed, the
 following shows that 137 plays a central role in fine-tuning analysis. 
@@ -658,7 +658,7 @@ meaning the ratio $a/137$ acts as a canonical ratio. Moreover, it is very close 
 $$a/137 \approx 3^{a/F}$$,
 where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis is also used by the Cosmos. Also, to 3.6 ppm:
 $$ a \approx (1-3^{-1/150})^{-1}$$
-confirms the role of the base 3.
+confirms the role of the basis 3.
 
 \subsection{The Arithmetical Logic : Holic Principle}
 
@@ -721,26 +721,24 @@ Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\
 \begin{equation}
 j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
-It was noted [3] that $$j\approx T_{mam}/T_{CMB}$$, the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$. So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover, to 0.1\%, the water triple point enters $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{mam}$$, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
+It was noted [3] that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
 
-Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $$j^{22} \approx 3 P^2 $$, and, more precisely, to 0.01 \% :$$j^{22} \approx Pp_E^7 $$, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
+Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $$j^{22} \approx 3 P^2 $$ and, more precisely, to 0.01 \% :$$j^{22} \approx Pp_E^7 $$ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
 The last equation means the implication of $B = e^{e^{\pi}}$, the double exponential of $\pi$, in the ultimate theory. Indeed, to 0.3 ppm and 0.03 \% :
 \begin{equation}
 (\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
 \end{equation}
-
 It is also exhibited in the following holographic relation:
 \begin{equation}
 (4\pi/3) B^3 \approx \pi(F^3/a)^2,
 \end{equation}
-
 while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/A$, in the Hydrogen atom, with $E_e = m_ec^2$.
 Note that, to 10 ppm and 2 ppm:
 \begin{equation}
 (H/n)^2(F^2/B)^3 \approx (4/3) a^2 \approx W/2\pi \beta^4
 \end{equation}
-Where $W$ is the W boson-Electron mass ratio (see Section 4). Now, to 30 ppm and 20 ppm :  
+where $W$ is the W boson-Electron mass ratio (see Section 4). Now, to 30 ppm and 20 ppm :  
 \begin{equation}
  (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
 \end{equation}
@@ -752,70 +750,58 @@ confirming that $j$ and $G$ has the status of invariant generalised dimension, i
 
 \subsection{Ubiquity of $a^{a}$}
 
-From the Compitation Hypothesis, $a$ must be an optimal basis. Now, as seen above 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term $a^a$ must be central.
+From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term $a^a$ must be central.
     
-Indeed, $a^a$ is, apart a $\pi$ factor, the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale and to the operational definition of e [3]. Now, it is here looked for its manifestations in classical mathematics. 
+Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of e [3]. Thus it seems interesting here to find its manifestations in classical mathematics. 
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
-starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
+starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$, which entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
 \begin{equation}
 u_{3}^{2^9} \approx (2(137^{2} + 48))^{64} \approx a^{a}
 \end{equation}
-defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role, see the following sub-section.
+defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role (see the following sub-section).
 
 Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 $a^{a} \approx u 1^(3\times(2^{8}-1))$
-defining $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
-simplest arithmetics generators. Moreover $a$ has been connected [3] to the canonical $e^{1/e}$ and the
-5th optimal musical scale with 306 notes [3]. This opens a \textit{new research in pure mathematics}.
+which defines $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
+simplest arithmetics generators. This opens a \textit{new research in pure mathematics}.
 
 \subsection{The Sporadic Groups}
 
 The above main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
-
 \begin{equation}
-O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^{2}}
+O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}}
 \end{equation}
-
 Moreover the above term appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
-
 $$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
-
 implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $f = a_w/2\pi(pH)^{3/2} \approx 8.43450$ appars as a computation basis, and the above relation implies, to 61 ppm:
 \begin{equation}
 lnf\approx \pi e/4d_e
 \end{equation}
-
 One is struck by the following combination of the three dimensionless parameters, the electrical
 one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong ratio $f$, 0.05 \% and 0.13 \%:
 \begin{equation}
 F/af \approx 496\approx j^{\delta}
 \end{equation}
-
-
-Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
+Also, to 8 ppm: $$lnO_{M} /2lnlnlnlnO_{M} \approx 137$$ and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 
 $$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$
 
-This confirms the above Complete Holic Principle, and the computation basis role of $Gamma$ is moreover confirmed by, to 2\%: $a^a \approx \Gamma^{209}$, and the order of the Baby-Monster $O_B\approx\Gamma^{24}$. Now, from $137 = 17 + 3\times 24$:
+This confirms the above Complete Holic Principle, and the computation basis role of $Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$, and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$. Now, from $137 = 17 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
-
 where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
 
-
 Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) [10], where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
-
-$$O_MO_B\approx H^{2H/a} /approx (g_0/p)^a \approx (496/j)^137 \approx  n_{ph}/d^{1/2} $$
-
-where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. So 496, $p$ and $g_0$ are also privileged computations basis. 
+$$O_MO_B\approx H^{2H/a} /approx (g_0/p)^a \approx (496/j)^137 \approx  n_{ph}/\delta^{1/2} $$
+where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
 From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$.
-This proves the close imbrication of the optimal basis.
+This proves the close imbrication of the optimal bases.
 
 \section{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
@@ -824,17 +810,21 @@ relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\subsection {The Euler constant e confirmed as the optimal calculation basis}
+\subsection {The Euler constant e is confirmed as the optimal calculation basis}
     The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
 f(k = e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
-
-The supplementary term $exp(e^2)$ being close to $a^{3/2}$. Note that the 'economic number' $E = exp(e^{e})\approx j^6/F$ (0.0\%), and that $e^2$ is the limit of the following musical series:
+where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number'
+$$e^{e^e}\approx (lnp)^{lnp}  (0.04\%)$$
+$$e^{e^e} \approx 137 \times exp(e^{e})^3  (6 ppm)$$
+$$e^{e^e} \approx e^e p a^2/137   (46 ppm)$$
+$$e^{e^e}\approx j^6/F  (0.004\%)$$
+Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
 a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale
 
-Now the canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Extended Holographic Principle, to 0.04 \%:
+The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Extended Holographic Principle, to 0.04 \%:
 \begin{equation}
 R_{GC}/\lambdabar_M  = (e_{GC}^2)^{210}  \approx (137e/a)^{420}  
 \end{equation}
