--- a/main.tex
+++ b/main.tex
@@ -772,7 +772,7 @@ The above main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
 \begin{equation}
-O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}}
+O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}
 \end{equation}
 Moreover the above term appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
 $$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
