--- a/main.tex
+++ b/main.tex
@@ -815,11 +815,12 @@ cosmic radius and the Topological Axis.
 \begin{equation}
 f(k = e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
-where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number'
-$$e^{e^e}\approx (lnp)^{lnp}  (0.04\%)$$
-$$e^{e^e} \approx 137 \times exp(e^{e})^3  (6 ppm)$$
-$$e^{e^e} \approx e^e p a^2/137   (46 ppm)$$
-$$e^{e^e}\approx j^6/F  (0.004\%)$$
+where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number', to 
+0.04 \%, 6 ppm, 46 ppm, 0.04 %  
+$$e^{e^e}\approx (lnp)^{lnp}          $$
+$$e^{e^e} \approx 137 \times exp(e^{e})^3   $$
+$$e^{e^e} \approx e^e p a^2/137 $$
+$$e^{e^e}\approx j^6/F $$
 Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
 a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale
