--- a/main.tex
+++ b/main.tex
@@ -818,7 +818,7 @@ f(k = e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number', to 
 0.04 \%, 6 ppm, 46 ppm, 0.04 %  
 $$e^{e^e}\approx (lnp)^{lnp}          $$
-$$e^{e^e} \approx 137 \times exp(e^{e})^3   $$
+$$e^{e^e} \approx 137 (e^{e})^3   $$
 $$e^{e^e} \approx e^e p a^2/137 $$
 $$e^{e^e}\approx j^6/F $$
 Note that $e^2$ is the limit of the following musical series:
