--- a/main.tex
+++ b/main.tex
@@ -816,7 +816,7 @@ cosmic radius and the Topological Axis.
 f(k = e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number', to 
-0.04 \%, 6 ppm, 46 ppm, 0.04 %  
+0.4 \%, 6 ppm, 46 ppm, 0.04 \%  
 $$e^{e^e}\approx (lnp)^{lnp}          $$
 $$e^{e^e} \approx 137 (e^{e})^3   $$
 $$e^{e^e} \approx e^e p a^2/137 $$
@@ -853,21 +853,18 @@ of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ a
 A confirmation of a symmetry between a and 137 is the following relation involving H, the
 Hydrogen electron mass ratio, precise to 83 ppb:
 $$a/137 \approx (6\pi^{5} H)^{1/2} /p$$
-One observe that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
-manifestation of the general neglectance of the Hierarchical Principle.
-
+One observe that the rejection of Wyler's work, due to a non-perfect formula for the $p$ and $a$ values, is a new
+manifestation of the general neglectance of the Hierarchy Principle.
 
 A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
-
  $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
+where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
 
-where $D = 196883$ is the Moonshine Monster dimension [23], where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. Note that its rejection, due to a non-perfect formula for the $p$ and $a$ values, is a new manifestation of the general neglect of the Hierarchy Principle.
-
-Note that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 + 19 $. This is no hazard, since this relation was long been deduced from basic considerations on quarks [3]. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, has a power 3/2 which is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to $6\times 5^5 \approx (aH/n)^2 $, to 0.012 \%. 
-Note that, while, to 41 ppm:
-$$R_{GC}/\lambdabar_e \approx 6^{128}/(1+1/\sqrt2)$$
-leading to the approximation for the celerity ratio $ C/c\approx3^{128} \sqrt{ln2/2}$. Moreover, one observes, to 2.6 %;
-$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$, so the quark hypothesis u = 5, d = 6 is comforted by the Grandcosmos. This would imply that the quark d is composite.
+Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks [3]. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 which is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
+Note that, with $i = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
+$$R_{GC}/\lambdabar_e \approx i5^{137} \approx 6^{137}/i^2 \approx 6^{128}/(1+1/\sqrt2)$$
+leading to the approximation for the celerity ratio $$ C/c\approx3^{128} \sqrt{ln2/2}$$ and confirming the role of bases $u = 5$ and $d = 6$, leading to (2.6 \%):
+$$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$,
  In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. Now, this is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
 \begin{equation}
 a \approx 44\pi - Arccos(1/e)
