--- a/main.tex
+++ b/main.tex
@@ -871,39 +871,36 @@ a \approx 44\pi - Arccos(1/e)
 \end{equation}
 a formula largely diffused on the web, but without indication of its origin. Now $w^{e^w}$ is close to the canonic $R_{GC}/\lambdabar_e$. The study of deviation leads to (0.14 ppm):
 $$w^{e^w} p/\sqrt2 \approx 2^{64\times5} (6\pi^5)^2$$
-This reaches the ppb precision for $\pi_1 = 77368/24627$, corresponding to the fractional development 3, 7, 16, -218. 
+This reaches the ppb precision for $\pi_1 = 77368/24627$, corresponding to the fractional development 3, 7, 16, -218. This confirms the above Rationalisation Hypothesis concerning the origin of the Cosmos vastness, namely
+that a rational approximation for $\pi$ is a intermediate calculation basis. 
 
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
 
-The value of the Topological Function for the String
-main dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
-ppm:
+The value of the Topological Function for the main String
+ dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1ppm:
 $$(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
 The corresponding value of $\pi$ in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
-2 \times 137$. This confirms again the above hypothesis concerning the origin of the Cosmos vastness, namely
-that a rational approximation for $\pi$ is a intermediate calculation basis. Indeed the rational value
+2 \times 137$, confirming again the Rationalisation Hypothesis. This leads to the rational value
 \begin{equation}
 \pi_{R} = (355u-22)/(113u-7) 
 \end{equation}
-corresponds to the above $G$ value to 10 ppb accuracy.
-Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation
-involving again 137:
+This corresponds to the above $G$ value to 10 ppb accuracy.
+Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
 The scale with 155 notes is not known, but 137 appears also in the classical musical scales [3], in
-particular the 5th 306 notes scale (about $\pi^{5}$), in conjunction with the canonical definition of the optimal
-scale e, encountered all along above.
+particular the $5^{th}$ 306 notes scale (about $\pi^{5}$), in conjunction with the canonical definition of the optimalscale e, encountered above.
 
 One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula: 
 \begin{equation}
-a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{1/3}
+a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 
-Recall that whole powers of $\pi$ appears also in the even order Riemann series.
+and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 \subsection {The electroweak constant mathematical fine tuning}
 
 The Particle standard model achieved the unification between electromagnetism and weak
-nuclear force. One ought to look for the relation involving a, 137, $a_{w}$ and the mathematical constants. One
+nuclear force. One ought to look for the relation involving $a$, 137, $a_{w}$ and the mathematical constants. One
 immediately gets:
 \begin{equation}
 a_{w} \approx (2\gamma 137 a/\pi)^{3}
@@ -917,29 +914,28 @@ see below how this formulae simplifies again by using the Atiyah Constant.
 
 \subsection {The Muon and Tau fine tuning}
 
-Admitting the above relation, this defines 
+Admitting the above relation, one defines 
 \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-inside its 0.25 ppm indetermination. 
+within its 0.25 ppm indetermination. 
 
 Another fine-tuning ties the muon, proton and Hydrogen masses: 
 \begin{equation}
 E_{F}/m_{e} c^{2} \approx
 m_{\mu}^{2}(m_{p} m_{H})^{1/2}/am_{e}^{3}
 \end{equation} 
-It yields to a muon mass relative to electron 
+This yields to a muon relative to electron mass ratio 
 \begin{equation}
 \mu \approx 206.7682869
-\end{equation} inside its 20 ppb measurement range.
-Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
+\end{equation} within its 20 ppb measurement range.
+Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3
 \end{equation}
-has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
-mass ratio at an epoch during which its measurement was false to 3 sigmas. With the above $\mu$ value, it
-gives $$\tau \approx 3477.441701$$ This Koide relation, quite discarded by the communality, is another sign of
-the serious incompleteness of present Particle Physics standard model. This value correlates with the
+which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
+mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
+gives $$\tau \approx 3477.441701$$ This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model. This value correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 \begin{equation}
 1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
@@ -948,18 +944,22 @@ confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 \subsection {The Intermediate Bosons mathematical fine tuning}
 
-The computer indicates, with $n \approx 1838.68366089(17)$ the neutron/electron mass ratio:
+The computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
 \begin{equation}
 W \approx \gamma a 137^{2} / 3\pi d_{e}
 \end{equation}
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 \cdot d_{e} n
 \end{equation}
-Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches the above $G$ value in the ppb range.
+Considering the above values, the relation
+\begin{equation}
+R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
+\end{equation}
+matches the above $G$ value in the ppb range.
 
 \subsection {The Gravitational Constant fine-tuning}
 
-Computer analysis shows the following ppb precise extension for the deviation between $2^{127}$ and
+Computer analysis shows also the following ppb precise extension for the deviation between $2^{127}$ and
 $a_{G}$ ,
 \begin{equation}
 (2^{127} / a_{G})^{1/2} \approx d_{e} (H/p)^{3} \approx a_{w}^{1/2} (a/\pi)^{4} ( \gamma/4n)^{3}
@@ -989,18 +989,17 @@ and the above relation giving $a_{G}$ shows a dual form, the first one without a
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
-Now, as recalled previously in the Holic Principle, the exponents represent the number of
-dimensions. So, this correlates to a dimensional reduction, by eliminating 137, from 9D and 6D to
-3D, which could be associated to Superstring theory, where the equations are coherent only if space
+Now, as was recalled previously in the Holic Principle, the exponents represent the number of
+dimensions. So, this correlates to a dimensional reduction, eliminating 137, from 9D and 6D to
+3D, which could be associated with the superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances [25].
-Bearing in mind:
+Bearing in mind that:
 \begin{equation}
-m_{e} c^{2} f{\gamma\Gamma} \approx 125.175 GeV
+m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
 \end{equation}
-compatible with the Higgs Boson energy, interesting to note the perfect match with the dimension index $k \approx \pi: \gamma\Gamma
-\approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains :
-$\Gamma \approx e^\pi + 2$
-meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about $n = \Gamma$.
+is compatible with the Higgs Boson energy, it is interesting to note the perfect match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx 4\pi + 2$$. The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains also :
+$$\Gamma \approx e^\pi + 2$$
+meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n = \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
 confirming the role of the dimension 496 and Atiyah's symmetry between $p$ and $a$. 
